--- a/src/main/resources/templates/list-user.html
+++ b/src/main/resources/templates/list-user.html
@@ -63,7 +63,7 @@
                     <form class="form-inline my-2 my-lg-0">
                         <label for="buscar" id="lblBuscar">Buscar:</label>
                         <input id="buscar" class="form-control mr-sm-2" type="search" placeholder="Buscar"
-                               aria-label="Search">
+                               aria-label="Search" name="q" th:value="${param.q}">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
                     </form>
                 </div>
